2007-01-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center.c (main): program name is gnome-control-center.

2007-01-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #394303

	* control-center.c (main): added new argument to appshelldata_new to
	force the app to quit when the window is closed.

2007-01-17  Thomas Wood  <thos@gnome.org>

	* gnomecc.desktop.in.in: Remove GNOME part of the Name property, as per
	discussion in bug 395129.

2007-01-11  Thomas Wood  <thos@gnome.org>

	* control-center.c: (get_actions_list), (main): Applied the shell part
	of the patch from bug 382730 (fix build with C89 compilers)

2006-11-13  Rodrigo Moya <rodrigo@novell.com>

	* gnomecc.desktop.in.in: added missing file.

	* Makefile.am: install .desktop file.