@@ -1,3 +1,9 @@
+2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* control-center.c: changed GConf prefix to /apps/...
+	(handle_static_action_clicked): prevent capplets from being launched
+	twice.
+
 2007-01-19  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* control-center.c (main): program name is gnome-control-center.
